# atlas-generator

./: .travis.yml  README.md  build.gradle  dependencies.gradle  gradle.properties  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflow_scripts/: merge-dev-to-main.sh  sonar.sh  tag-main.sh
.github/workflows/: ci.yml
.travis/: build.sh  install.sh  merge-dev-to-main.sh  merge-dev-to-master.sh  secring.gpg.enc  sonar.sh  tag-main.sh  tag-master.sh  trigger-release.sh
config/checkstyle/: checkstyle.xml
gradle/: deployment.gradle  execution.gradle  quality.gradle
gradle/wrapper/: gradle-wrapper.properties
scripts/DeployAtlasGeneratorAWS/: DeployAtlasGeneratorAWS.py  README.md  configuration.json  requirements.txt
scripts/cloudPBFShardControl/: README.md  cloudPBFShardControl.py  pbfReShard.py  pbfShardGenerator.py  requirements.txt  sharding_quadtree.txt
scripts/regenerateShardingTree/: README.md  regenerate_sharding_tree.py  requirements.txt  setup.cfg
scripts/regenerateShardingTree/regenerate_sharding_tree/: ShardingTree.py  Tile.py  __init__.py  __main__.py
scripts/regenerateShardingTree/regenerate_sharding_tree/file_information/: FileInformation.py  FileInformationBase.py  FileInformationLocal.py  FileInformationS3.py  __init__.py
scripts/regenerateShardingTree/test/test_regenerate_sharding_tree/: test_ShardingTree.py  test_Tile.py
src/integrationTest/resources/aql-files/: testUpdate1.aql
src/main/resources/: log4j.properties
src/main/resources/aql-files/: testUpdate.aql
src/test/resources/aql-files/: testUpdate.aql.sig  (+1 more)
(+307 files in other folders)
