[metadata]
name = regenerate_sharding_tree
version = 0.0.1

[options]
packages =
  regenerate_sharding_tree
  regenerate_sharding_tree.file_information
install_requires =
  geojson
  tqdm

[options.entry_points]
console_scripts =
  regenerate_sharding_tree = regenerate_sharding_tree:main
[options.extras_require]
s3 =
  boto3
  botocore
